Fix animations on iPhone

--- a/alarmClock/app/styles/app.less
+++ b/alarmClock/app/styles/app.less
@@ -39,18 +39,26 @@ ul {
         animation-duration: 220s;
         animation-iteration-count: infinite;
         animation-timing-function: linear;
+        -webkit-animation-name: spin;
+        -webkit-animation-duration: 220s;
+        -webkit-animation-iteration-count: infinite;
+        -webkit-animation-timing-function: linear;
 
         &:nth-child(2) {
             animation-duration: 60s;
+            -webkit-animation-duration: 60s;
         }
         &:nth-child(3) {
             animation-duration: 220s;
+            -webkit-animation-duration: 220s;
         }
         &:nth-child(4) {
             animation-duration: 90s;
+            -webkit-animation-duration: 90s;
         }
         &:nth-child(5) {
             animation-duration: 220s;
+            -webkit-animation-duration: 220s;
         }
     }
     path {
@@ -222,6 +230,10 @@ ul {
         animation-duration: 1s;
         animation-iteration-count: infinite;
         animation-timing-function: linear;
+        -webkit-animation-name: pulse;
+        -webkit-animation-duration: 1s;
+        -webkit-animation-iteration-count: infinite;
+        -webkit-animation-timing-function: linear;
     }
     .action {
         height: 100%;
