--- a/app/assets/alarm-clock.css
+++ b/app/assets/alarm-clock.css
@@ -39,18 +39,26 @@ ul {
   animation-duration: 220s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  -webkit-animation-name: spin;
+  -webkit-animation-duration: 220s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
 }
 .background svg:nth-child(2) {
   animation-duration: 60s;
+  -webkit-animation-duration: 60s;
 }
 .background svg:nth-child(3) {
   animation-duration: 220s;
+  -webkit-animation-duration: 220s;
 }
 .background svg:nth-child(4) {
   animation-duration: 90s;
+  -webkit-animation-duration: 90s;
 }
 .background svg:nth-child(5) {
   animation-duration: 220s;
+  -webkit-animation-duration: 220s;
 }
 .background path {
   fill: #1F1F1F;
@@ -226,6 +234,10 @@ ul {
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  -webkit-animation-name: pulse;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
 }
 .alarm-control .action {
   height: 100%;
